# crewai-zapiermcp-test

./: Frontend.md  README.md  crew1.md  crewai.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  zapier-tool-mcp.md
src/: main.js  style.css
src/backend/: __init__.py  crew.py  main.py
